bk_ida/gccida/g1/delete_related_insns
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/delete_related_insns/src/jump.c:2188:4: error: expected ';' after expression
rtx nonnote_insn; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/delete_related_insns/src/jump.c:2188:5: error: use of undeclared identifier 'nonnote_insn'
rtx nonnote_insn; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/delete_related_insns/src/jump.c:2203:16: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v4 = ( __int64)insn[1]; 
               ^~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/delete_related_insns/src/jump.c:2233:30: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
for ( v15.rtwint = ( __int64)insn[3].fld[0]; v15.rtwint; v15.rtwint = *( __int64 *)( v15.rtwint + 16) ) 
                             ^~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/delete_related_insns/src/jump.c:2239:29: error: expected ')'
delete_related_insns( ( rtx)v16); 
                            ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/delete_related_insns/src/jump.c:2239:21: note: to match this '('
delete_related_insns( ( rtx)v16); 
                    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/delete_related_insns/src/jump.c:2252:24: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v17.rtwint = ( __int64)insn[1].fld[0]; 
                       ^~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/delete_related_insns/src/jump.c:2285:16: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v6 = ( __int64)insn[4]; 
               ^~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/delete_related_insns/src/jump.c:2290:29: error: expected ')'
delete_related_insns( ( rtx)v6); 
                            ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/delete_related_insns/src/jump.c:2290:21: note: to match this '('
delete_related_insns( ( rtx)v6); 
                    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/delete_related_insns/src/jump.c:2298:1: error: use of undeclared identifier 'nonnote_insn'
nonnote_insn = next_nonnote_insn( ( rtx)v6); 
^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/delete_related_insns/src/jump.c:2298:41: error: expected ')'
nonnote_insn = next_nonnote_insn( ( rtx)v6); 
                                        ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/delete_related_insns/src/jump.c:2298:33: note: to match this '('
nonnote_insn = next_nonnote_insn( ( rtx)v6); 
                                ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/delete_related_insns/src/jump.c:2299:33: error: use of undeclared identifier 'nonnote_insn'
if ( nonnote_insn && *( _WORD *)nonnote_insn == 33 && ( unsigned __int16)( **( _WORD **)&nonnote_insn[2] - 44) <= 1u ) 
                                ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/delete_related_insns/src/jump.c:2299:6: error: use of undeclared identifier 'nonnote_insn'
if ( nonnote_insn && *( _WORD *)nonnote_insn == 33 && ( unsigned __int16)( **( _WORD **)&nonnote_insn[2] - 44) <= 1u ) 
     ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/delete_related_insns/src/jump.c:2299:90: error: use of undeclared identifier 'nonnote_insn'
if ( nonnote_insn && *( _WORD *)nonnote_insn == 33 && ( unsigned __int16)( **( _WORD **)&nonnote_insn[2] - 44) <= 1u ) 
                                                                                         ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/delete_related_insns/src/jump.c:2300:23: error: use of undeclared identifier 'nonnote_insn'
delete_related_insns( nonnote_insn); 
                      ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/delete_related_insns/src/jump.c:2305:18: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v9 = ( __int16 *)insn[2]; 
                 ^~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/delete_related_insns/src/jump.c:2317:29: error: expected ')'
delete_related_insns( ( rtx)v14); 
                            ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/delete_related_insns/src/jump.c:2317:21: note: to match this '('
delete_related_insns( ( rtx)v14); 
                    ^
16 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/delete_related_insns/src/obj/jump.o] Error 1
